fix background width on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -12,19 +12,22 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     line-height: normal;
-    margin: 0px;
+    margin: 0;
+    position: absolute;
+    /* width: 100vw; */
 }
 
 .section-1 {
     background-image: url("../img/desk_1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: top;
+    /* background-position: top; */
     background-position: center center;
     filter: grayscale(100%); 
     position: relative;
-    /* top: 57.6px; */
+    top: 0px;
     height: 100vh;
+    padding-right: -80px;
 }
 
 .hello {
@@ -41,6 +44,11 @@ body {
     cursor: default;
 }
 
+@media only screen and (max-width: 400px) {
+    .hello {
+        width: 80%;
+    }
+}
 .hello div {
     margin-top: 8px;
     line-height: 1.6;
